[project]
name = "trpg-agent-voice"
version = "0.1.0"
description = "TRPG Agent Voice — 语音识别版 AI 跑团（STT + TTS）"
requires-python = ">=3.11,<3.14"
dependencies = [
    "trpg-agent[voice]>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trpg_agent_voice"]
